--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,8 +1,8 @@
 :root {
     --main-font: 'Roboto Mono', monospace;
     --second-font: 'Roboto', sans-serif;
-    --keycolor: rgba(255, 255, 255, 0.774);
-    --text-color: rgb(12, 12, 12);
+    --keycolor: rgba(7, 7, 8, 0.281);
+    --text-color: rgb(255, 255, 255);
   }
   
 
@@ -105,34 +105,59 @@ a {
     border-radius: 12px;
     overflow: hidden;
     display: grid;
-    grid-template-rows: 440px 60px;
+    grid-template-rows: 78% 10% 12%;
     grid-template-areas: 'imagem,
-                        legenda';
+                        legenda,
+                        areaTags';
 }
 
 .card img {
     grid-area: imagem;
     object-fit: cover;
-    height: 500px;
+    height: 520px;
     width: auto;
     transition: height 800ms ease-in-out;
-    grid-row: 1/3;
+    grid-row: 1/4;
     
 }
 
-.card img:hover {
-    height: 520px;
-}
+/* .card img:hover {
+    height: 540px;
+    overflow: hidden;
+} */
 
 
-.projects .card p {
+.projects .card .description {
     color: var(--text-color);
     background-color: var(--keycolor);
     grid-area: legenda;
     grid-row: 2/3;
-    padding: 0px 20px;;
+    padding: 0 30px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     z-index: 1;
 }
 
+.tags {
+    grid-area: areaTags;
+    grid-row: 3/4;
+    z-index: 1;
+    display: flex;
+    background-color: var(--keycolor);
+    padding: 5px 10px 30px 20px;
+}
+
+.tags .tag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 10px; 
+    padding: 6px 10px;
+    background-color: var(--keycolor);
+    font-size: 0.5em;
+    border-radius: 5px;
+    color: var(--text-color);
+    flex-wrap: wrap;
+    letter-spacing: 3px;
+}
